// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`generatePipelines should generate correct pipelines with a non-docs change 1`] = `
[
  {
    "steps": [
      {
        "group": "bwc-snapshots",
        "steps": [
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dignore.tests.seed v{{matrix.BWC_VERSION}}#bwcTest",
            "env": {
              "BWC_VERSION": "{{matrix.BWC_VERSION}}",
            },
            "label": "{{matrix.BWC_VERSION}} / bwc-snapshots",
            "matrix": {
              "setup": {
                "BWC_VERSION": [
                  "7.17.14",
                  "8.10.2",
                  "8.11.0",
                ],
              },
            },
            "timeout_in_minutes": 300,
          },
        ],
      },
    ],
  },
  {
    "env": {
      "CUSTOM_ENV_VAR": "value",
    },
    "steps": [
      {
        "command": "echo 'hello world'",
        "label": "test-step",
      },
    ],
  },
]
`;

exports[`generatePipelines should generate correct pipelines with only docs changes 1`] = `
[
  {
    "steps": [
      {
        "agents": {
          "buildDirectory": "/dev/shm/bk",
          "image": "family/elasticsearch-ubuntu-2004",
          "machineType": "custom-32-98304",
          "provider": "gcp",
        },
        "command": ".ci/scripts/run-gradle.sh -Dignore.tests.seed precommit :docs:check",
        "label": "docs-check",
        "timeout_in_minutes": 300,
      },
    ],
  },
]
`;

exports[`generatePipelines should generate correct pipelines with full BWC expansion 1`] = `
[
  {
    "steps": [
      {
        "group": "bwc",
        "steps": [
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.0.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.0.0",
            },
            "key": "full-bwc:7_0_0",
            "label": "7.0.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.0.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.0.1",
            },
            "key": "full-bwc:7_0_1",
            "label": "7.0.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.1.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.1.0",
            },
            "key": "full-bwc:7_1_0",
            "label": "7.1.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.1.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.1.1",
            },
            "key": "full-bwc:7_1_1",
            "label": "7.1.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.2.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.2.0",
            },
            "key": "full-bwc:7_2_0",
            "label": "7.2.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.2.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.2.1",
            },
            "key": "full-bwc:7_2_1",
            "label": "7.2.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.3.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.3.0",
            },
            "key": "full-bwc:7_3_0",
            "label": "7.3.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.3.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.3.1",
            },
            "key": "full-bwc:7_3_1",
            "label": "7.3.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.3.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.3.2",
            },
            "key": "full-bwc:7_3_2",
            "label": "7.3.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.4.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.4.0",
            },
            "key": "full-bwc:7_4_0",
            "label": "7.4.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.4.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.4.1",
            },
            "key": "full-bwc:7_4_1",
            "label": "7.4.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.4.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.4.2",
            },
            "key": "full-bwc:7_4_2",
            "label": "7.4.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.5.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.5.0",
            },
            "key": "full-bwc:7_5_0",
            "label": "7.5.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.5.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.5.1",
            },
            "key": "full-bwc:7_5_1",
            "label": "7.5.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.5.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.5.2",
            },
            "key": "full-bwc:7_5_2",
            "label": "7.5.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.6.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.6.0",
            },
            "key": "full-bwc:7_6_0",
            "label": "7.6.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.6.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.6.1",
            },
            "key": "full-bwc:7_6_1",
            "label": "7.6.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.6.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.6.2",
            },
            "key": "full-bwc:7_6_2",
            "label": "7.6.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.7.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.7.0",
            },
            "key": "full-bwc:7_7_0",
            "label": "7.7.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.7.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.7.1",
            },
            "key": "full-bwc:7_7_1",
            "label": "7.7.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.8.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.8.0",
            },
            "key": "full-bwc:7_8_0",
            "label": "7.8.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.8.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.8.1",
            },
            "key": "full-bwc:7_8_1",
            "label": "7.8.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.9.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.9.0",
            },
            "key": "full-bwc:7_9_0",
            "label": "7.9.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.9.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.9.1",
            },
            "key": "full-bwc:7_9_1",
            "label": "7.9.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.9.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.9.2",
            },
            "key": "full-bwc:7_9_2",
            "label": "7.9.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.9.3#bwcTest",
            "env": {
              "BWC_VERSION": "7.9.3",
            },
            "key": "full-bwc:7_9_3",
            "label": "7.9.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.10.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.10.0",
            },
            "key": "full-bwc:7_10_0",
            "label": "7.10.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.10.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.10.1",
            },
            "key": "full-bwc:7_10_1",
            "label": "7.10.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.10.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.10.2",
            },
            "key": "full-bwc:7_10_2",
            "label": "7.10.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.11.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.11.0",
            },
            "key": "full-bwc:7_11_0",
            "label": "7.11.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.11.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.11.1",
            },
            "key": "full-bwc:7_11_1",
            "label": "7.11.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.11.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.11.2",
            },
            "key": "full-bwc:7_11_2",
            "label": "7.11.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.12.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.12.0",
            },
            "key": "full-bwc:7_12_0",
            "label": "7.12.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.12.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.12.1",
            },
            "key": "full-bwc:7_12_1",
            "label": "7.12.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.13.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.13.0",
            },
            "key": "full-bwc:7_13_0",
            "label": "7.13.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.13.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.13.1",
            },
            "key": "full-bwc:7_13_1",
            "label": "7.13.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.13.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.13.2",
            },
            "key": "full-bwc:7_13_2",
            "label": "7.13.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.13.3#bwcTest",
            "env": {
              "BWC_VERSION": "7.13.3",
            },
            "key": "full-bwc:7_13_3",
            "label": "7.13.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.13.4#bwcTest",
            "env": {
              "BWC_VERSION": "7.13.4",
            },
            "key": "full-bwc:7_13_4",
            "label": "7.13.4 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.14.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.14.0",
            },
            "key": "full-bwc:7_14_0",
            "label": "7.14.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.14.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.14.1",
            },
            "key": "full-bwc:7_14_1",
            "label": "7.14.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.14.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.14.2",
            },
            "key": "full-bwc:7_14_2",
            "label": "7.14.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.15.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.15.0",
            },
            "key": "full-bwc:7_15_0",
            "label": "7.15.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.15.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.15.1",
            },
            "key": "full-bwc:7_15_1",
            "label": "7.15.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.15.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.15.2",
            },
            "key": "full-bwc:7_15_2",
            "label": "7.15.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.16.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.16.0",
            },
            "key": "full-bwc:7_16_0",
            "label": "7.16.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.16.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.16.1",
            },
            "key": "full-bwc:7_16_1",
            "label": "7.16.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.16.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.16.2",
            },
            "key": "full-bwc:7_16_2",
            "label": "7.16.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.16.3#bwcTest",
            "env": {
              "BWC_VERSION": "7.16.3",
            },
            "key": "full-bwc:7_16_3",
            "label": "7.16.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.0#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.0",
            },
            "key": "full-bwc:7_17_0",
            "label": "7.17.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.1#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.1",
            },
            "key": "full-bwc:7_17_1",
            "label": "7.17.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.2#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.2",
            },
            "key": "full-bwc:7_17_2",
            "label": "7.17.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.3#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.3",
            },
            "key": "full-bwc:7_17_3",
            "label": "7.17.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.4#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.4",
            },
            "key": "full-bwc:7_17_4",
            "label": "7.17.4 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.5#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.5",
            },
            "key": "full-bwc:7_17_5",
            "label": "7.17.5 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.6#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.6",
            },
            "key": "full-bwc:7_17_6",
            "label": "7.17.6 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.7#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.7",
            },
            "key": "full-bwc:7_17_7",
            "label": "7.17.7 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.8#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.8",
            },
            "key": "full-bwc:7_17_8",
            "label": "7.17.8 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.9#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.9",
            },
            "key": "full-bwc:7_17_9",
            "label": "7.17.9 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.10#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.10",
            },
            "key": "full-bwc:7_17_10",
            "label": "7.17.10 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.11#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.11",
            },
            "key": "full-bwc:7_17_11",
            "label": "7.17.11 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.12#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.12",
            },
            "key": "full-bwc:7_17_12",
            "label": "7.17.12 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.13#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.13",
            },
            "key": "full-bwc:7_17_13",
            "label": "7.17.13 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v7.17.14#bwcTest",
            "env": {
              "BWC_VERSION": "7.17.14",
            },
            "key": "full-bwc:7_17_14",
            "label": "7.17.14 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.0.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.0.0",
            },
            "key": "full-bwc:8_0_0",
            "label": "8.0.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.0.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.0.1",
            },
            "key": "full-bwc:8_0_1",
            "label": "8.0.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.1.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.1.0",
            },
            "key": "full-bwc:8_1_0",
            "label": "8.1.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.1.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.1.1",
            },
            "key": "full-bwc:8_1_1",
            "label": "8.1.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.1.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.1.2",
            },
            "key": "full-bwc:8_1_2",
            "label": "8.1.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.1.3#bwcTest",
            "env": {
              "BWC_VERSION": "8.1.3",
            },
            "key": "full-bwc:8_1_3",
            "label": "8.1.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.2.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.2.0",
            },
            "key": "full-bwc:8_2_0",
            "label": "8.2.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.2.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.2.1",
            },
            "key": "full-bwc:8_2_1",
            "label": "8.2.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.2.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.2.2",
            },
            "key": "full-bwc:8_2_2",
            "label": "8.2.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.2.3#bwcTest",
            "env": {
              "BWC_VERSION": "8.2.3",
            },
            "key": "full-bwc:8_2_3",
            "label": "8.2.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.3.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.3.0",
            },
            "key": "full-bwc:8_3_0",
            "label": "8.3.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.3.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.3.1",
            },
            "key": "full-bwc:8_3_1",
            "label": "8.3.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.3.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.3.2",
            },
            "key": "full-bwc:8_3_2",
            "label": "8.3.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.3.3#bwcTest",
            "env": {
              "BWC_VERSION": "8.3.3",
            },
            "key": "full-bwc:8_3_3",
            "label": "8.3.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.4.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.4.0",
            },
            "key": "full-bwc:8_4_0",
            "label": "8.4.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.4.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.4.1",
            },
            "key": "full-bwc:8_4_1",
            "label": "8.4.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.4.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.4.2",
            },
            "key": "full-bwc:8_4_2",
            "label": "8.4.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.4.3#bwcTest",
            "env": {
              "BWC_VERSION": "8.4.3",
            },
            "key": "full-bwc:8_4_3",
            "label": "8.4.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.5.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.5.0",
            },
            "key": "full-bwc:8_5_0",
            "label": "8.5.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.5.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.5.1",
            },
            "key": "full-bwc:8_5_1",
            "label": "8.5.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.5.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.5.2",
            },
            "key": "full-bwc:8_5_2",
            "label": "8.5.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.5.3#bwcTest",
            "env": {
              "BWC_VERSION": "8.5.3",
            },
            "key": "full-bwc:8_5_3",
            "label": "8.5.3 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.6.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.6.0",
            },
            "key": "full-bwc:8_6_0",
            "label": "8.6.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.6.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.6.1",
            },
            "key": "full-bwc:8_6_1",
            "label": "8.6.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.6.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.6.2",
            },
            "key": "full-bwc:8_6_2",
            "label": "8.6.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.7.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.7.0",
            },
            "key": "full-bwc:8_7_0",
            "label": "8.7.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.7.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.7.1",
            },
            "key": "full-bwc:8_7_1",
            "label": "8.7.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.8.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.8.0",
            },
            "key": "full-bwc:8_8_0",
            "label": "8.8.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.8.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.8.1",
            },
            "key": "full-bwc:8_8_1",
            "label": "8.8.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.8.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.8.2",
            },
            "key": "full-bwc:8_8_2",
            "label": "8.8.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.9.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.9.0",
            },
            "key": "full-bwc:8_9_0",
            "label": "8.9.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.9.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.9.1",
            },
            "key": "full-bwc:8_9_1",
            "label": "8.9.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.9.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.9.2",
            },
            "key": "full-bwc:8_9_2",
            "label": "8.9.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.10.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.10.0",
            },
            "key": "full-bwc:8_10_0",
            "label": "8.10.0 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.10.1#bwcTest",
            "env": {
              "BWC_VERSION": "8.10.1",
            },
            "key": "full-bwc:8_10_1",
            "label": "8.10.1 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.10.2#bwcTest",
            "env": {
              "BWC_VERSION": "8.10.2",
            },
            "key": "full-bwc:8_10_2",
            "label": "8.10.2 / bwc",
            "timeout_in_minutes": 300,
          },
          {
            "agents": {
              "buildDirectory": "/dev/shm/bk",
              "image": "family/elasticsearch-ubuntu-2004",
              "machineType": "custom-32-98304",
              "provider": "gcp",
            },
            "command": ".ci/scripts/run-gradle.sh -Dbwc.checkout.align=true v8.11.0#bwcTest",
            "env": {
              "BWC_VERSION": "8.11.0",
            },
            "key": "full-bwc:8_11_0",
            "label": "8.11.0 / bwc",
            "timeout_in_minutes": 300,
          },
        ],
      },
    ],
  },
  {
    "env": {
      "CUSTOM_ENV_VAR": "value",
    },
    "steps": [
      {
        "command": "echo 'hello world'",
        "label": "test-step",
      },
    ],
  },
]
`;

exports[`generatePipelines should generate correct pipeline when using a trigger comment for it 1`] = `
[
  {
    "env": {
      "CUSTOM_ENV_VAR": "value",
    },
    "steps": [
      {
        "command": "echo 'hello world'",
        "label": "test-step",
      },
    ],
  },
]
`;
